Related: fdo#35404 treat failed column same as non-existing column